2013-11-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-permissions-table): Make the new icon depend on
	capabilities, instead of on the role.

2013-11-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (main): Add --gnutls-priorities option with NORMAL as
	default value. Add MHD_OPTION_HTTPS_PRIORITIES to MHD_start_daemon calls
	accordingly.

	* doc/gsad.8: Add documentation for gnutls-priorities cli option.

2013-11-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (init_validator): Don't validate value 2 for hosts_allow
	and ifaces_allow.

	* src/gsad_omp.c (create_user_omp, save_user_omp): Remove special case
	handling of value 2 for hosts_allow and ifaces allow. Refactor code.

	* src/html/omp.xsl (html-create-user-form): Remove Allow All choice for
	interfaces and hosts access. Adjust default choices.
	(user): Remove output case for Allow All hosts and interfaces access.
	(user [edit]): Remove Allow All choice.

2013-11-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_many): Add owner=any to default filter.

2013-11-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (assets): Add refresh icon tooltip.
	(report [assets]): Add tooltip for names in report column.

2013-11-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (verify_agent_response): New template.
	(get_agent): Match verify response.
	(html-create-permission-form): Exclude GET_VERSION from dropdown.  Use
	Create instead of Save in button text.
	(html-edit-permission-form): Exclude GET_VERSION from dropdown.

2013-11-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/last_inactive.png,
	src/html/img/first_inactive.png,
	src/html/img/previous_inactive.png,
	src/html/img/next_inactive.png: Updated placeholders with
	greyed out icons produced in the same way as the others.

2013-11-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
