@@ -1300,6 +1300,8 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
                              mode="response-indicator"/>
         <xsl:apply-templates select="new_tag/gsad_msg"
                              mode="response-indicator"/>
+        <xsl:apply-templates select="new_task/create_task_response"
+                             mode="response-indicator"/>
         <xsl:apply-templates select="new_user/create_user_response"
                              mode="response-indicator"/>
 
